--- a/config/_default/hugo.yaml
+++ b/config/_default/hugo.yaml
@@ -1,4 +1,4 @@
-baseURL: 'https://muhammadtatma.github.io/hugo-portfolio/'
+baseURL: 'https://muhammadtatma.com'
 languageCode: en-us
 title: Muhammad Tatma
 theme: hugo-theme-stack
