--- a/config/_default/menu.yaml
+++ b/config/_default/menu.yaml
@@ -1,21 +1,21 @@
 social:
   - identifier: github
     name: GitHub
-    url: 'https://github.com/CaiJimmy/hugo-theme-stack'
+    url: 'https://github.com/MuhammadTatma'
     params:
       icon: brand-github
-  - identifier: twitter
-    name: Twitter
-    url: 'https://twitter.com'
+  - identifier: Mail
+    name: Mail
+    url: 'mailto:muh.tatma442@gmail.com'
     params:
-      icon: brand-twitter
+      icon: mail
   - identifier: instagram
     name: Instagram
-    url: 'https://instagram.com'
+    url: 'https://www.instagram.com/tatmainnulq/'
     params:
       icon: instagram
   - identifier: linkedin
     name: Linkedin
-    url: 'https://linkedin.com'
+    url: 'https://www.linkedin.com/in/muhammad-tatma/'
     params:
       icon: linkedin
